@@ -49,6 +49,28 @@ sub entries {
     die "abstract method";
 }
 
+=head2 test_entries
+
+List the entries in the repository corresponding to the test version
+of the specified site.
+
+=cut
+
+sub test_entries {
+    die "abstract method";
+}
+
+=head2 prod_entries
+
+List the entries in the repository corresponding to the production
+version of the specified site.
+
+=cut
+
+sub prod_entries {
+    die "abstract method";
+}
+
 =head2 deploy_site
 
 Deploy the specified L<UFL::WebAdmin::SiteDeploy::Site>.
