@@ -2,7 +2,7 @@
 
 use strict;
 use warnings;
-use Test::More tests => 17;
+use Test::More tests => 19;
 use UFL::WebAdmin::SiteDeploy::Repository::SVN;
 use UFL::WebAdmin::SiteDeploy::TestRepository;
 use URI::file;
@@ -33,19 +33,21 @@ my $REPO = UFL::WebAdmin::SiteDeploy::Repository::SVN->new(uri => $REPO_URI);
     is($site->uri->host, 'www.ufl.edu', 'host matches');
     is($site->uri->path, '/', 'path matches');
 
+    is($site->identifier, 'www.ufl.edu', 'site identifier is correct');
+
     isa_ok($site->repository, 'UFL::WebAdmin::SiteDeploy::Repository::SVN');
 
-    my $client = SVN::Client->new;
-    my $current_tags = $client->ls("$REPO_URI/www.ufl.edu/tags", 'HEAD', 0);
+    my $current_tags = $site->prod_entries;
     is(scalar keys %$current_tags, 2, 'tags directory currently contains two tags');
 
     $site->deploy(13, "Deploying " . $site->uri . " on behalf of dwc");
 
-    my $new_tags = $client->ls("$REPO_URI/www.ufl.edu/tags", 'HEAD', 0);
+    my $new_tags = $site->prod_entries;
     is(scalar keys %$new_tags, 3, 'tags directory currently now contains three tags');
 
     my $newest_tag = (sort keys %$new_tags)[2];
 
+    my $client = SVN::Client->new;
     my $log;
     $client->log([ "$REPO_URI/www.ufl.edu/tags/$newest_tag" ], 14, 14, 0, 0, sub { $log = $_[4] });
     is($log, 'Deploying http://www.ufl.edu/ on behalf of dwc', 'log message is correct');
@@ -53,16 +55,18 @@ my $REPO = UFL::WebAdmin::SiteDeploy::Repository::SVN->new(uri => $REPO_URI);
 
 {
     my $site = UFL::WebAdmin::SiteDeploy::Site->new(
-        uri => 'http://test.www.ufl.edu',
+        uri => 'http://this-does-not-exist.ufl.edu',
         repository => $REPO,
     );
 
     isa_ok($site, 'UFL::WebAdmin::SiteDeploy::Site');
 
     isa_ok($site->uri, 'URI::http');
-    is($site->uri, 'http://test.www.ufl.edu', 'URI matches');
-    is($site->uri->host, 'test.www.ufl.edu', 'host matches');
+    is($site->uri, 'http://this-does-not-exist.ufl.edu', 'URI matches');
+    is($site->uri->host, 'this-does-not-exist.ufl.edu', 'host matches');
     is($site->uri->path, '', 'path matches');
+
+    is($site->identifier, 'this-does-not-exist.ufl.edu', 'site identifier is correct');
 
     isa_ok($site->repository, 'UFL::WebAdmin::SiteDeploy::Repository::SVN');
 
